migrated guava function to java 8 function in dynamic request matcher factory